# moveit

moveit_core/: CMakeLists.txt  collision_detector_fcl_description_new.xml  package.xml
moveit_core/collision_detection/src/: collision_env.cpp
moveit_core/collision_detection_bullet/: CMakeLists.txt
moveit_core/collision_detection_bullet/examples/: box_box_example.cpp  bullet_robot.cpp
moveit_core/collision_detection_bullet/src/: collision_env_bullet.cpp
moveit_core/collision_detection_fcl/src/: collision_common.cpp  collision_env_fcl.cpp
moveit_core/collision_detection_fcl_new/: CMakeLists.txt
moveit_core/collision_detection_fcl_new/include/moveit/collision_detection_fcl_new/: collision_detector_allocator_fcl_new.h  collision_detector_fcl_plugin_loader_new.h  collision_env_fcl_new.h
moveit_core/collision_detection_fcl_new/include/moveit/collision_detection_fcl_new/fcl_integration/: fcl_bvh_manager.h  fcl_collision_object_wrapper.h  fcl_discrete_bvh_manager.h  fcl_utils.h
moveit_core/collision_detection_fcl_new/src/: collision_detector_fcl_plugin_loader_new.cpp  collision_env_fcl_new.cpp
moveit_core/collision_detection_fcl_new/src/fcl_integration/: fcl_bvh_manager.cpp  fcl_collision_object_wrapper.cpp  fcl_discrete_bvh_manager.cpp  fcl_utils.cpp
moveit_core/collision_distance_field/src/: collision_env_distance_field.cpp
moveit_core/robot_model/src/: fixed_joint_model.cpp  floating_joint_model.cpp  joint_model.cpp  joint_model_group.cpp  planar_joint_model.cpp  prismatic_joint_model.cpp  revolute_joint_model.cpp  robot_model.cpp
moveit_core/robot_state/src/: robot_state.cpp
moveit_ros/planning/: CMakeLists.txt
(+45 files in other folders)
